2006-10-05  Christian Persch  <chpe@cvs.gnome.org>
	
	* embed/mozilla/GeckoSpellCheckEngine.cpp:

	Fix build with gecko 1.8.1.

2006-10-02  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-10-02  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.16.1 ===

	* configure.ac:

	Updated for 2.16.1.

	* src/ephy-history-window.c: (confirmation_dialog_construct),
	(ephy_history_window_construct):

	Add a window group for the history window.

2006-10-01  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_ref),
	(ephy_spinner_images_unref), (ephy_spinner_cache_data_unload),
	(ephy_spinner_images_load), (ephy_spinner_cache_get_images),
	(ephy_spinner_load_images), (ephy_spinner_unload_images),
	(ephy_spinner_init), (ephy_spinner_expose),
	(bump_spinner_frame_cb), (ephy_spinner_start),
	(ephy_spinner_remove_update_callback), (ephy_spinner_stop),
	(ephy_spinner_size_request):
	* lib/widgets/ephy-spinner.h:

	Merged from HEAD.

2006-10-01  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_load),
	(ephy_spinner_cache_get_images), (bump_spinner_frame_cb):
	* lib/widgets/testspinner.c: (add_spinner), (main):

	Fix compile warnings.

2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	Add smb: to recognised web schemes. Bug #352733.

2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_free),
	(ephy_spinner_cache_data_unload), (scale_to_size),
	(ephy_spinner_images_load), (ephy_spinner_cache_data_new),
	(ephy_spinner_cache_data_free), (ephy_spinner_cache_get_images),
	(ephy_spinner_cache_finalize), (ephy_spinner_cache_class_init),
	(ephy_spinner_cache_ref), (ephy_spinner_init),
	(ephy_spinner_set_size), (ephy_spinner_size_request):
	* lib/widgets/testspinner.c:

	Fix spinner with new g-i-t. Fixes bug #330415.