@@ -1,3 +1,9 @@
+2006-10-06  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/AutoWindowModalState.cpp:
+
+	Use the top DOM window here, and adapt to gecko 1.8.1.
+
 2006-10-05  Christian Persch  <chpe@cvs.gnome.org>
 	
 	* embed/mozilla/GeckoSpellCheckEngine.cpp:
